# develhack

./: .envrc  .gitignore  CMakeLists.txt  Dockerfile  README.md  circle.yml  develhack.sublime-project  wscript
cmake/: NDS.cmake  devkitARM.cmake  grit.cmake
cmake/Modules/: FindDevkitPRO.cmake  FindLuac.cmake
data/: hello.txt
gfx/fighters/: fighters.grit  rasky-idle.ase  rasky-walk.ase
gfx/fighters/dummy/: dummy.grit
gfx/fighters/rasky/: rasky.grit
gfx/levels/forest/: forest.grit
gfx/levels/lounge/: a-sfondo.grit  b-cielo.grit  lounge.grit
gfx/levels/tuttobene/: tuttobene.grit
gfx/specials/: specials.grit
lua/: hello.lua  lounge.lua  tuttobene.lua
script/: bootstrap  build  cibuild  console  deploy  extract-boxes  mkdatadisk  oneshot  run  setup  wav2ima
sfx/: hyo-fate.xm  punch.ima
snd/: street_fighter.xm
src/: anim.c  anim.h  debug.c  debug.h  fight.c  fight.h  fixmath.c  fixmath.h  frames.c  frames.h  hitbox.c  hitbox.h  hitboxes.gen.c  input.c  input.h  io.c  io.h  levels.c  levels.h  main.c  mmap.h  pool.c  pool.h  sound.c  sound.h  specials.c  specials.h  stage.c  stage.h
src/arm7/: main.c
